unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/bt_stripe__Dispute_Evidence__c.object-meta.xml
<CustomObject>
    <description>Dispute Evidence can be added to a Dispute and sent to the Stripe API. Dispute Evidence can included related Files.</description>
    <label>Dispute Evidence</label>
    <nameField>
        <displayFormat>DE-{000000}</displayFormat>
        <label>Dispute Evidence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispute Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>