unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Address__c</fullName>
    <description>The billing address provided by the customer.</description>
    <inlineHelpText>The billing address provided by the customer.</inlineHelpText>
    <label>Billing Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>