unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Cancellation_Rebuttal__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Cancellation_Rebuttal__c</fullName>
    <description>A justification for why the customer&#39;s subscription was not canceled.</description>
    <inlineHelpText>A justification for why the customer&#39;s subscription was not canceled.</inlineHelpText>
    <label>Cancellation Rebuttal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>