unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Customer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer_Email_Address__c</fullName>
    <description>The email address of the customer.</description>
    <inlineHelpText>The email address of the customer.</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>