unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer_Name__c</fullName>
    <description>The name of the customer.</description>
    <inlineHelpText>The name of the customer.</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>