unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Customer_Purchase_IP__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer_Purchase_IP__c</fullName>
    <description>The IP address that the customer used when making the purchase.</description>
    <inlineHelpText>The IP address that the customer used when making the purchase.</inlineHelpText>
    <label>Customer IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>