unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Duplicate_Charge_Documentation_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Duplicate_Charge_Documentation_ID__c</fullName>
    <label>Duplicate Charge Documentation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>