unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error_Type__c</fullName>
    <inlineHelpText>Stripe error type. This field auto-populates if there is an error when the transaction processes.</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>