unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Refund_Refusal_Explanation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Refund_Refusal_Explanation__c</fullName>
    <description>A justification for why the customer is not entitled to a refund.</description>
    <inlineHelpText>A justification for why the customer is not entitled to a refund.</inlineHelpText>
    <label>Refund Refusal Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>