unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Address__c</fullName>
    <description>The address to which a physical product was shipped. You should try to include as much complete address information as possible.</description>
    <inlineHelpText>The address to which a physical product was shipped. You should try to include as much complete address information as possible.</inlineHelpText>
    <label>Shipping Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>