unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Carrier__c</fullName>
    <description>The delivery service that shipped a physical product, such as Fedex, UPS, USPS, etc. If multiple carriers were used for this purchase, please separate them with commas.</description>
    <inlineHelpText>The delivery service that shipped a physical product, such as Fedex, UPS, USPS, etc. If multiple carriers were used for this purchase, please separate them with commas.</inlineHelpText>
    <label>Shipping Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>