unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Shipping_Date_String__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Date_String__c</fullName>
    <inlineHelpText>Format is a String just like the format in Stripe</inlineHelpText>
    <label>Shipping Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>