unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Shipping_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Tracking_Number__c</fullName>
    <label>Shipping Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>