unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Submit__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this checkbox to submit the evidence to stripe.</description>
    <inlineHelpText>Use this checkbox to submit the evidence to stripe.</inlineHelpText>
    <label>Submit</label>
    <type>Checkbox</type>
</CustomField>