unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/recordTypes/bt_stripe__Basic_Response.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Basic_Response</fullName>
    <active>true</active>
    <description>Evidence text and an optional file upload</description>
    <label>Basic Response</label>
</RecordType>