unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/recordTypes/bt_stripe__Digital_Product.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Digital_Product</fullName>
    <active>true</active>
    <description>Access to software, files, or digital experiences. For example: apps, SaaS, MP3s, digitally-delivered tickets.</description>
    <label>Digital Product</label>
</RecordType>