unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/recordTypes/bt_stripe__Offline_Service.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Offline_Service</fullName>
    <active>true</active>
    <description>Labor or assistance provided on-location or remotely. For example: home-cleaning services, electronics repair, transportation.</description>
    <label>Offline Service</label>
</RecordType>