unpackaged/main/default/objects/bt_stripe__Dispute_Evidence__c/recordTypes/bt_stripe__Physical_Product.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Physical_Product</fullName>
    <active>true</active>
    <description>Anything that was physically delivered or shipped to the customer. For example: clothing, electronics, groceries.</description>
    <label>Physical Product</label>
</RecordType>